<resources>
    <string name="app_name">Save The Bird</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="explore_hooded_plover">Explore Hooded Plover</string>
    <string name="know_them_better">Know Them Better</string>
    <string name="natural_enemy">Natural Enemy</string>
    <string name="feather_color">Feather Color</string>
    <string name="life_cycle">Life Cycle</string>
    <string name="favorite_food">Favorite Food</string>
    <string name="nickname">Nickname</string>
    <string name="feeding_period">Feeding Period</string>
    <string name="todo">TODO</string>
    <string name="view_life_cycle_of_hoody">View Life Cycle of Hoody</string>
    <string name="what_went_wrong">What Went Wrong?</string>
    <string name="support">Support</string>
    <string name="explore">Explore</string>
    <string name="about_us">About Us</string>
    <string name="habitat">Habitat</string>
    <string name="habitat_answer">Beach/ Salt Lake</string>
    <string name="back">back</string>
    <string name="fact_1">Vehicles and Pedestrians \nvs Hooded Plovers</string>
    <string name="fact_2">Kids and Pedestrians \nvs Hooded Plovers</string>
    <string name="fact_3">Dogs and Horses \nvs Hooded Plovers</string>
    <string name="fact_4">Only about 550 hoodies in Victoria</string>
    <string name="natural_enemy_answer">Red Fox, Herring Gull, Raven</string>
    <string name="breeding_season">Breeding Season</string>
    <string name="breeding_season_answer">August to February</string>
    <string name="incubation_period">Incubation Period</string>
    <string name="incubation_period_answer">30 days</string>
    <string name="nestling_period">Nestling Period</string>
    <string name="nestling_period_answer">13 days</string>
    <string name="clutch_size">Clutch Size</string>
    <string name="clutch_size_answer">1~3, usually 3</string>
    <string name="avg_size_weight">Average Size &amp; Weight</string>
    <string name="avg_size_weight_answer">21cm &amp; 95g</string>
    <string name="fact_1_title_1">Kids and Pedestrians</string>
    <string name="hp">Hooded Plovers</string>
    <string name="vs">vs</string>
    <string name="you">You</string>
    <string name="fact_1_content">\t \t \t \t must be thinking, “But kids are so cute! I wish I could run like them on the beach!”. Although did you know that they are one of the major threats for the Hooded Plovers? Sounds crazy, right? The Hooded Plovers’ tiny eggs are easy prey with the kids running and pedestrians walking on the beaches. Hooded Plovers lay their nests right in the middle of the beaches so that they can have an all-round view on their predators. But the poor little birds face a tough time saving their eggs from these irregular predators, humans.</string>
    <string name="fact_2_title_1">Vehicles</string>
    <string name="a">A</string>
    <string name="fact_2_content">\t \t lovely sunny day and a road trip to the beach with family – sounds like a perfect day out! We all take our cars to the beach, don’t we? But did you know that around 80% of the Hooded Plover nests which are devastated are crushed by vehicles? Cars and off-road vehicles on beaches is a very common problem that these little birds face. Their tiny sized eggs and chicks make them very hard to see for the people driving. These vehicles on and near the beaches highly contribute towards the low breeding success of Hooded Plovers.</string>
    <string name="fact_3_title_1">Dogs and Horses</string>
    <string name="we">We</string>
    <string name="fact_3_content">\t \t \t all love to take our pets on the beach to get them some fresh air on their walks, right? And we also like to set our pets free off the leash so that they can enjoy their day out. But sadly, off the leash dogs also love chasing the Hooded Plovers and end up killing them. They also love to explore the beaches to hunt down their nests and eggs to trample them. Similarly, horses on beaches also tend to trample these small eggs and nests. We might not realise these unfortunate things happening in the tiny birds’ lives on a normal day, but the poor Hooded Plovers face these difficulties regularly.</string>
    <string name="fact_4_title">Only about 550 hoodies in Victoria, where are 692 recorded beaches</string>
    <string name="this_4">This</string>
    <string name="fact_4_content">\t \t \t \t \t \t shy little creature, we affectionately call \'Hoody\', is a shorebird named Hooded Plover. Fifteen years ago, the terrible fact was that only 200 Hoodies were left, ringing alarm bells in Victoria. Therefore, BirdLife Australia has adopted a series of conservations to help the species return to Australian beaches.\n\n Notably, the survival rate of the Hooded Plover chicks is one of the lowest of all species, i.e. there is only 1 chick growing to an adult in every 100. Without human assistance, the survival rate of Hoodies from eggs to fully grown adults is only 2.5%.\n\nIn addition to frequent tides and storms due to climate change and unavoidable natural enemies, including red foxes, silver gulls, magpies and crows, up to 95% of the nesting failure rate is also due to people\'s unintentional beach behaviours, such as residents bringing their pet dogs on the beach. Indiscriminate chasing in the nesting area on the beach, horse racing or cars destroying the exposed birds\' nests on beaches, and even during breeding, an increasing number of tourists, make the Hooded Plovers unable to safely leave their nests to get food for their little ones.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>