<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.notifications.NotificationsFragment">

    <TextView
        android:id="@+id/text_notifications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_more_support"
        android:layout_width="197dp"
        android:layout_height="85dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="148dp"
        android:background="@drawable/shape_capsule"
        android:drawableTop="@drawable/ic_phone"
        android:fontFamily="monospace"
        android:text="@string/support"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/btn_more_explore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.655"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_more_explore"
        android:layout_width="197dp"
        android:layout_height="85dp"
        android:layout_marginStart="86dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="128dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/shape_capsule"
        android:drawableTop="@drawable/ic_search"
        android:fontFamily="monospace"
        android:text="@string/explore"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/btn_more_about_us"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_more_support" />

    <Button
        android:id="@+id/btn_more_about_us"
        android:layout_width="197dp"
        android:layout_height="85dp"
        android:layout_marginStart="86dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="128dp"
        android:background="@drawable/shape_capsule"
        android:drawableTop="@drawable/ic_info"
        android:fontFamily="monospace"
        android:text="@string/about_us"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_more_explore" />


</androidx.constraintlayout.widget.ConstraintLayout>