<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fact_veh">

    <ImageView
        android:id="@+id/fact_kid_bg_tv"
        android:layout_width="515dp"
        android:layout_height="926dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.502"
        app:srcCompat="@drawable/fact_bg" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="117dp"
        android:layout_marginEnd="298dp"
        android:layout_marginBottom="777dp"
        android:fontFamily="monospace"
        android:text="@string/fact_2_title_1"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/fact_kid_bg_tv"
        app:layout_constraintEnd_toEndOf="@+id/fact_kid_bg_tv"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/fact_kid_bg_tv"
        app:layout_constraintTop_toTopOf="@+id/fact_kid_bg_tv"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="304dp"
        android:layout_marginTop="309dp"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="648dp"
        android:fontFamily="monospace"
        android:text="@string/hp"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/fact_kid_bg_tv"
        app:layout_constraintEnd_toEndOf="@+id/fact_kid_bg_tv"
        app:layout_constraintHorizontal_bias="0.982"
        app:layout_constraintStart_toStartOf="@+id/fact_kid_bg_tv"
        app:layout_constraintTop_toTopOf="@+id/fact_kid_bg_tv"
        app:layout_constraintVertical_bias="0.079" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="147dp"
        android:layout_height="195dp"
        android:layout_marginStart="74dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="351dp"
        android:layout_marginBottom="634dp"
        app:layout_constraintBottom_toBottomOf="@+id/fact_kid_bg_tv"
        app:layout_constraintEnd_toEndOf="@+id/fact_kid_bg_tv"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/fact_kid_bg_tv"
        app:layout_constraintTop_toTopOf="@+id/fact_kid_bg_tv"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/car_bird" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="275dp"
        android:layout_marginTop="227dp"
        android:layout_marginEnd="268dp"
        android:layout_marginBottom="729dp"
        android:fontFamily="monospace"
        android:text="@string/vs"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/fact_kid_bg_tv"
        app:layout_constraintEnd_toEndOf="@+id/fact_kid_bg_tv"
        app:layout_constraintStart_toStartOf="@+id/fact_kid_bg_tv"
        app:layout_constraintTop_toTopOf="@+id/fact_kid_bg_tv" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="167dp"
        android:layout_height="354dp"
        android:layout_marginStart="328dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="77dp"
        android:layout_marginBottom="428dp"
        app:layout_constraintBottom_toBottomOf="@+id/fact_kid_bg_tv"
        app:layout_constraintEnd_toEndOf="@+id/fact_kid_bg_tv"
        app:layout_constraintHorizontal_bias="0.771"
        app:layout_constraintStart_toStartOf="@+id/fact_kid_bg_tv"
        app:layout_constraintTop_toTopOf="@+id/fact_kid_bg_tv"
        app:layout_constraintVertical_bias="0.021"
        app:srcCompat="@drawable/hp3" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="79dp"
        android:layout_marginTop="426dp"
        android:layout_marginEnd="439dp"
        android:layout_marginBottom="523dp"
        android:fontFamily="monospace"
        android:text="@string/a"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/fact_kid_bg_tv"
        app:layout_constraintEnd_toEndOf="@+id/fact_kid_bg_tv"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="@+id/fact_kid_bg_tv"
        app:layout_constraintTop_toTopOf="@+id/fact_kid_bg_tv"
        app:layout_constraintVertical_bias="0.301" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="386dp"
        android:layout_height="333dp"
        android:layout_marginStart="79dp"
        android:layout_marginTop="444dp"
        android:layout_marginEnd="77dp"
        android:layout_marginBottom="189dp"
        android:fontFamily="monospace"
        android:text="@string/fact_2_content"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/fact_kid_bg_tv"
        app:layout_constraintEnd_toEndOf="@+id/fact_kid_bg_tv"
        app:layout_constraintStart_toStartOf="@+id/fact_kid_bg_tv"
        app:layout_constraintTop_toTopOf="@+id/fact_kid_bg_tv" />
</androidx.constraintlayout.widget.ConstraintLayout>